ingress/echo_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: echo-ingress
  annotations:
    konghq.com/strip-path: 'true'

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /echo
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-service
                port:
                  number: 1027
