ingress/flask_mock_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mock-data-server-ingress
  annotations:
    konghq.com/strip-path: 'true'

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /mock-service
            backend:
              service:
                name: flask-mock-service
                port:
                  number: 5000
            pathType: ImplementationSpecific
